FindBugs: use Long.valueOf()